@@ -1,3 +1,8 @@
+2009-01-18  Bas Wijnen  <wijnen@debian.org>
+
+	* expressions.c: Fix incorrect valid declaration of expressions when
+	only the last label is valid.  Thanks to Tomaž Šolc for reporting.
+
 2007-09-09  Bas Wijnen  <shevek@fmf.nl>
 
 	* z80asm.c: Wrap program counter consistently.
